# uncertainties-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
examples/: example_basic.cpp
include/uncertainties/: eigen_support.hpp  udouble.hpp  ufloat.hpp  umath.hpp  variable_registry.hpp
src/: udouble.cpp  ufloat.cpp  umath.cpp
tests/: test_correlation.cpp  test_eigen.cpp  test_udouble.cpp  test_ufloat.cpp  test_umath.cpp
